Deploy user campaign cloning
